--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,7 +156,7 @@ nav .nav-wrapper {
 }
 
 .card-paragraph {
-    font-size: 21px;
+    font-size: 19px;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -253,13 +253,6 @@ nav .nav-wrapper {
     font-weight: bold;
 }
 
-.app-subtitle {
-    text-align: center;
-    color: black;
-    font-size: 16px;
-    margin-top: -24px;
-}
-
 .project {
     width: calc(50% - 10px);
     margin-top: 20px;
@@ -277,17 +270,21 @@ nav .nav-wrapper {
 }
 
 .work-image:hover {
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 .github-repo {
-    font-size: 21px;
+    font-size: 19px;
     font-family: 'Raleway', sans-serif;
     position: relative;
 }
 
 .connect-section {
     font-family: 'Antic', sans-serif;
+}
+
+.connect-box {
+    height: 300px;
 }
 
 .input-field label {
@@ -298,8 +295,9 @@ nav .nav-wrapper {
     text-align: center;
 }
 
-.connect-link {
-    margin-left: 30%;
+.connect-list {
+    display: flex;
+    justify-content: center;
 }
 
 .social-link {
@@ -311,14 +309,14 @@ nav .nav-wrapper {
 }
 
 .social-link:hover {
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
-.link-title {
+/* .link-title {
     display: inline-block;
     position: absolute;
     margin: 30px;
-}
+} */
 
 .link-title a,
 .github-repo {
@@ -354,19 +352,23 @@ nav .nav-wrapper {
     transform: scaleX(1);
 }
 
-.jelly-div {
+/* .jelly-div {
     text-align: center;
     padding: 60px;
-}
+} */
 
-.logo-2 {
+/* .logo-2 {
     max-width: 200px;
     padding: 20px;
     border-radius: 5px;
     background-color: white;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.5), 0 17px 32px 0 rgba(0, 0, 0, 0.5);
-}
+} */
 
+.footer-name {
+    margin-top: 200px;
+    font-size: 22px;
+}
 
 /* Media Queries */
 @media only screen and (max-width: 1300px) {
@@ -376,14 +378,12 @@ nav .nav-wrapper {
     #banner-phrase2 {
         font-size: 50px;
     }
-    .card-paragraph {
-        font-size: 20px;
-    }
     .github-repo {
         font-size: 20px;
     }
-    .app-subtitle {
-        font-size: 15px;
+    .social-link {
+        width: 50px;
+        height: 50px;
     }
 }
 
@@ -423,14 +423,8 @@ nav .nav-wrapper {
     html {
         font-size: 20px;
     }
-    .card-paragraph {
-        font-size: 19px;
-    }
     .github-repo {
         font-size: 19px;
-    }
-    .app-subtitle {
-        font-size: 14px;
     }
     .right,
     .social-link-mini {
@@ -479,15 +473,13 @@ nav .nav-wrapper {
     .github-repo {
         font-size: 14px;
     }
-    .app-subtitle {
-        font-size: 13px;
-    }
     .connect-link {
-        margin-left: 0;
+        /* margin-left: 0; */
     }
     .social-link {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
+        margin: 5px;
     }
 }
 
