--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,6 +149,10 @@ nav .nav-wrapper {
     border-top: 2px solid white;
 }
 
+.featured-image {
+    display: none;
+}
+
 .paper-box {
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.5), 0 17px 32px 0 rgba(0, 0, 0, 0.5);
     border-radius: 5px;
