--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,7 +275,6 @@ nav .nav-wrapper {
 
 .work-image {
     width: 100%;
-    border: 3px solid rgb(133, 240, 133);
     border-radius: 10px;
 }
 
@@ -311,11 +310,11 @@ nav .nav-wrapper {
 }
 
 .social-link {
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     margin: 10px;
-    border: 3px solid rgb(133, 240, 133);
-    border-radius: 10px;
+    /* border: 3px solid rgb(133, 240, 133); */
+    border-radius: 5px;
 }
 
 .social-link:hover {
