changed fonts to Roboto

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ nav .nav-wrapper {
 
 .link-item {
     padding: 0 25px 0px 25px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Antic', sans-serif;
     font-size: 20px;
     border-radius: 5px;
     color: white;
@@ -164,7 +164,7 @@ nav .nav-wrapper {
 
 .card-title {
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Antic', sans-serif;
     font-size: 34px;
     margin: 0;
     padding-top: 30px;
@@ -296,7 +296,7 @@ nav .nav-wrapper {
     text-align: center;
     color: black;
     font-size: 24px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .project {
@@ -320,13 +320,13 @@ nav .nav-wrapper {
 
 .work-card-paragraph {
     font-size: 19px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
     padding-top: 0;
 }
 
 .github-repo {
     font-size: 19px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     position: relative;
     padding-bottom: 20px;
     color: blue;
@@ -427,7 +427,6 @@ nav .nav-wrapper {
 
 .footer {
     font-size: 19px;
-    font-family: 'Roboto', sans-serif;
     margin: 0;
 }
 
